--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pacman</title>
   </head>
+  <link
+    href="https://fonts.googleapis.com/css?family=Press Start 2P"
+    rel="stylesheet"
+  />
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
